optimized buildCriteria and update/add test